# llmperf

./: .gitignore  README.md  benchmark_config.py  pyproject.toml
configs/generation_heavy/: 50_in_1000_out.json  50_in_2000_out.json  50_in_5000_out.json  50_in_500_out.json
configs/prompt_heavy/: 1000_in_50_out.json  2000_in_50_out.json  5000_in_50_out.json  500_in_50_out.json
configs/prompt_ratio_sweep/: 1000_total_tokens.json  2000_total_tokens.json  500_total_tokens.json
src/llmperf/: common.py  common_metrics.py  models.py  otel.py  utils.py
src/llmperf/ray_clients/: azureai_chat_completions_client.py  openai_chat_completions_client.py
src/llmperf/request_generators/sonnet/: input_output.py  ratio_sweep.py
